[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/Buk.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Enemies/Buk.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Sound/buk.wav" type="AudioStream" id=3]



[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Buk" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_horizontal_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( -255.143, 128.482, -255.144, -129.085, -232.607, -195.623, -119.922, -255.722, 111.203, -255.723, 172.47, -196.698, 255.106, -123.721, 256.181, 126.334, 172.472, 190.726, 112.373, 257.265, -121.153, 256.119, -152.622, 192.308, -233.041, 192.309 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Crush" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )

[node name="ShakeTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Buk_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Buk_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShakeTime" to="." method="_on_ShakeTime_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
